codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui_app_server/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  Thread: Robie [explorer]

  $ echo hi

› 1. Allow and proceed (y)
  2. Deny, and tell Codex what to do differently (esc)

  Press enter to confirm or esc to cancel or o to open thread
